test_scripts/errors/struct_method_body_error.shm
struct Foo {
    x
    fn bad(self) {
        self.x + "string";
    }
}
let f = Foo(1);
f.bad();
